--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -39,7 +39,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7"
+  },
   "author": "",
   "license": "ISC"
 }
